// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help Message ensure 'not enough non-option arguments' warning message 1`] = `
",,c8.js[opts][script][opts]

Commands:
c8.jscheck-coveragecheckwhethercoverageiswithinthresholdsprovided
c8.jsreportreadV8coveragedatafromtempandoutputreport

Reportingoptions
-r,--reportercoveragereporter(s)touse[default:\\"text\\"]
-o,--reports-dir,--report-dirdirectorywherecoveragereportswillbe
outputto[default:\\"./coverage\\"]
--allsupplying--allwillcausec8toconsiderall
srcfilesinthecurrentworkingdirectory
whenthedeterminingcoverage.Respects
include/exclude.[boolean][default:false]
--srcsupplying--srcwilloverridecwdasthe
defaultlocationwhere--alllooksforsrc
files.--srccanbesuppliedmultipletimes
andeachdirectorywillbeincluded.This
allowsforworkspacesspanningmultiple
projects[string]
-n,--includealistofspecificfilesthatshouldbe
covered(globpatternsaresupported)
[default:[]]
-x,--excludealistofspecificfilesanddirectoriesthat
shouldbeexcludedfromcoverage(glob
patternsaresupported)[default:
[\\"coverage/**\\",\\"packages/*/test{,s}/**\\",\\"**/*.d.ts\\",\\"test{,s}/**\\",\\"test{,-*}.{
js,cjs,mjs,ts,tsx,jsx}\\",\\"**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}\\",\\"**/__tests__/
**\\",\\"**/{ava,babel,nyc}.config.{js,cjs,mjs}\\",\\"**/jest.config.{js,cjs,mjs,ts}\\",
\\"**/{karma,rollup,webpack}.config.js\\",\\"**/.{eslint,mocha}rc.{js,cjs}\\"]]
-e,--extensionalistofspecificfileextensionsthat
shouldbecovered
[default:[\\".js\\",\\".cjs\\",\\".mjs\\",\\".ts\\",\\".tsx\\",\\".jsx\\"]]
-a,--exclude-after-remapapplyexcludelogictofilesaftertheyare
remappedbyasource-map
[boolean][default:false]
--skip-fulldonotshowfileswith100%statement,
branch,andfunctioncoverage
[boolean][default:false]

Coveragethresholds
--check-coveragecheckwhethercoverageiswithinthresholdsprovided
[boolean][default:false]
--brancheswhat%ofbranchesmustbecovered?[number][default:0]
--functionswhat%offunctionsmustbecovered?
[number][default:0]
--lineswhat%oflinesmustbecovered?[number][default:90]
--statementswhat%ofstatementsmustbecovered?
[number][default:0]
--per-filecheckthresholdsperfile[boolean][default:false]
--100shortcutfor--check-coverage--lines100--functions
100--branches100--statements100
[boolean][default:false]

Options:
--helpShowhelp[boolean]
--versionShowversionnumber[boolean]
-c,--configpathtoJSONconfigurationfile
[default:(default)]
--exclude-node-moduleswhetherornottoexcludeallnode_modulefolders
(i.e.**/node_modules/**)bydefault
[boolean][default:true]
--temp-directorydirectoryV8coveragedataiswrittentoandread
from
[default:\\"./coverage/tmp\\"]
--cleanshouldtempfilesbedeletedbeforescript
execution[boolean][default:true]
--resolveresolvepathstoalternatebasedirectory
[default:\\"\\"]
--wrapper-lengthhowmanybytesisthewrapperprefixonexecuted
JavaScript[number]
--omit-relativeomitanypathsthatarenotabsolute,e.g.,
internal/net.js[boolean][default:true]
--allowExternalsupplying--allowExternalwillcausec8toallow
filesfromoutsideofyourcwd.Thisappliesboth
tofilesdiscoveredincoveragetempfilesand
alsosrcfilesdiscoveredifusingthe--allflag.
[boolean][default:false]
--merge-asyncsupplying--merge-asyncwillmergeallv8coverage
reportsasynchronouslyandincrementally.Thisis
toavoidOOMissueswithNode.jsruntime.
[boolean][default:false]
--print-configPrintthederivedconfigurationbetweencommand
lineparametersandloadedconfigurationfile
[boolean][default:false]
--print-config-formatFormattoprinttheconfigurationin.Accepted
formatsareeithertextorjson
[string][default:\\"text\\"]

visithttps://git.io/vHysAforlistofavailablereporters

Notenoughnon-optionarguments:got0,needatleast1
"
`;

exports[`Help Message ensure the help message is correct 1`] = `
",c8.js[opts][script][opts]

Commands:
c8.jscheck-coveragecheckwhethercoverageiswithinthresholdsprovided
c8.jsreportreadV8coveragedatafromtempandoutputreport

Reportingoptions
-r,--reportercoveragereporter(s)touse[default:\\"text\\"]
-o,--reports-dir,--report-dirdirectorywherecoveragereportswillbe
outputto[default:\\"./coverage\\"]
--allsupplying--allwillcausec8toconsiderall
srcfilesinthecurrentworkingdirectory
whenthedeterminingcoverage.Respects
include/exclude.[boolean][default:false]
--srcsupplying--srcwilloverridecwdasthe
defaultlocationwhere--alllooksforsrc
files.--srccanbesuppliedmultipletimes
andeachdirectorywillbeincluded.This
allowsforworkspacesspanningmultiple
projects[string]
-n,--includealistofspecificfilesthatshouldbe
covered(globpatternsaresupported)
[default:[]]
-x,--excludealistofspecificfilesanddirectoriesthat
shouldbeexcludedfromcoverage(glob
patternsaresupported)[default:
[\\"coverage/**\\",\\"packages/*/test{,s}/**\\",\\"**/*.d.ts\\",\\"test{,s}/**\\",\\"test{,-*}.{
js,cjs,mjs,ts,tsx,jsx}\\",\\"**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}\\",\\"**/__tests__/
**\\",\\"**/{ava,babel,nyc}.config.{js,cjs,mjs}\\",\\"**/jest.config.{js,cjs,mjs,ts}\\",
\\"**/{karma,rollup,webpack}.config.js\\",\\"**/.{eslint,mocha}rc.{js,cjs}\\"]]
-e,--extensionalistofspecificfileextensionsthat
shouldbecovered
[default:[\\".js\\",\\".cjs\\",\\".mjs\\",\\".ts\\",\\".tsx\\",\\".jsx\\"]]
-a,--exclude-after-remapapplyexcludelogictofilesaftertheyare
remappedbyasource-map
[boolean][default:false]
--skip-fulldonotshowfileswith100%statement,
branch,andfunctioncoverage
[boolean][default:false]

Coveragethresholds
--check-coveragecheckwhethercoverageiswithinthresholdsprovided
[boolean][default:false]
--brancheswhat%ofbranchesmustbecovered?[number][default:0]
--functionswhat%offunctionsmustbecovered?
[number][default:0]
--lineswhat%oflinesmustbecovered?[number][default:90]
--statementswhat%ofstatementsmustbecovered?
[number][default:0]
--per-filecheckthresholdsperfile[boolean][default:false]
--100shortcutfor--check-coverage--lines100--functions
100--branches100--statements100
[boolean][default:false]

Options:
--helpShowhelp[boolean]
--versionShowversionnumber[boolean]
-c,--configpathtoJSONconfigurationfile
[default:(default)]
--exclude-node-moduleswhetherornottoexcludeallnode_modulefolders
(i.e.**/node_modules/**)bydefault
[boolean][default:true]
--temp-directorydirectoryV8coveragedataiswrittentoandread
from
[default:\\"./coverage/tmp\\"]
--cleanshouldtempfilesbedeletedbeforescript
execution[boolean][default:true]
--resolveresolvepathstoalternatebasedirectory
[default:\\"\\"]
--wrapper-lengthhowmanybytesisthewrapperprefixonexecuted
JavaScript[number]
--omit-relativeomitanypathsthatarenotabsolute,e.g.,
internal/net.js[boolean][default:true]
--allowExternalsupplying--allowExternalwillcausec8toallow
filesfromoutsideofyourcwd.Thisappliesboth
tofilesdiscoveredincoveragetempfilesand
alsosrcfilesdiscoveredifusingthe--allflag.
[boolean][default:false]
--merge-asyncsupplying--merge-asyncwillmergeallv8coverage
reportsasynchronouslyandincrementally.Thisis
toavoidOOMissueswithNode.jsruntime.
[boolean][default:false]
--print-configPrintthederivedconfigurationbetweencommand
lineparametersandloadedconfigurationfile
[boolean][default:false]
--print-config-formatFormattoprinttheconfigurationin.Accepted
formatsareeithertextorjson
[string][default:\\"text\\"]

visithttps://git.io/vHysAforlistofavailablereporters
,"
`;

exports[`Print derived configuration CLI option ensure valid json 1`] = `
Object {
  "100": false,
  "all": false,
  "allow-external": false,
  "branches": 82,
  "check-coverage": false,
  "clean": true,
  "config": "./.nycrc",
  "exclude": Array [
    "coverage/**",
    "packages/*/test{,s}/**",
    "**/*.d.ts",
    "test{,s}/**",
    "test{,-*}.{js,cjs,mjs,ts,tsx,jsx}",
    "**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}",
    "**/__tests__/**",
    "**/{ava,babel,nyc}.config.{js,cjs,mjs}",
    "**/jest.config.{js,cjs,mjs,ts}",
    "**/{karma,rollup,webpack}.config.js",
    "**/.{eslint,mocha}rc.{js,cjs}",
  ],
  "exclude-after-remap": false,
  "exclude-node-modules": true,
  "extension": Array [
    ".js",
    ".cjs",
    ".mjs",
    ".ts",
    ".tsx",
    ".jsx",
  ],
  "functions": 0,
  "include": Array [],
  "lines": 95,
  "merge-async": false,
  "omit-relative": true,
  "per-file": false,
  "print-config": true,
  "print-config-format": "json",
  "report-dir": "./coverage",
  "reporter": Array [
    "html",
    "text",
  ],
  "reports-dir": "./coverage",
  "resolve": "",
  "skip-full": false,
  "statements": 95,
  "temp-directory": "./coverage/tmp",
}
`;

exports[`Print derived configuration CLI option should demand arguments: --print-config=false 1`] = `
",,c8.js[opts][script][opts]

Commands:
c8.jscheck-coveragecheckwhethercoverageiswithinthresholdsprovided
c8.jsreportreadV8coveragedatafromtempandoutputreport

Reportingoptions
-r,--reportercoveragereporter(s)touse[default:\\"text\\"]
-o,--reports-dir,--report-dirdirectorywherecoveragereportswillbe
outputto[default:\\"./coverage\\"]
--allsupplying--allwillcausec8toconsiderall
srcfilesinthecurrentworkingdirectory
whenthedeterminingcoverage.Respects
include/exclude.[boolean][default:false]
--srcsupplying--srcwilloverridecwdasthe
defaultlocationwhere--alllooksforsrc
files.--srccanbesuppliedmultipletimes
andeachdirectorywillbeincluded.This
allowsforworkspacesspanningmultiple
projects[string]
-n,--includealistofspecificfilesthatshouldbe
covered(globpatternsaresupported)
[default:[]]
-x,--excludealistofspecificfilesanddirectoriesthat
shouldbeexcludedfromcoverage(glob
patternsaresupported)[default:
[\\"coverage/**\\",\\"packages/*/test{,s}/**\\",\\"**/*.d.ts\\",\\"test{,s}/**\\",\\"test{,-*}.{
js,cjs,mjs,ts,tsx,jsx}\\",\\"**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}\\",\\"**/__tests__/
**\\",\\"**/{ava,babel,nyc}.config.{js,cjs,mjs}\\",\\"**/jest.config.{js,cjs,mjs,ts}\\",
\\"**/{karma,rollup,webpack}.config.js\\",\\"**/.{eslint,mocha}rc.{js,cjs}\\"]]
-e,--extensionalistofspecificfileextensionsthat
shouldbecovered
[default:[\\".js\\",\\".cjs\\",\\".mjs\\",\\".ts\\",\\".tsx\\",\\".jsx\\"]]
-a,--exclude-after-remapapplyexcludelogictofilesaftertheyare
remappedbyasource-map
[boolean][default:false]
--skip-fulldonotshowfileswith100%statement,
branch,andfunctioncoverage
[boolean][default:false]

Coveragethresholds
--check-coveragecheckwhethercoverageiswithinthresholdsprovided
[boolean][default:false]
--brancheswhat%ofbranchesmustbecovered?[number][default:0]
--functionswhat%offunctionsmustbecovered?
[number][default:0]
--lineswhat%oflinesmustbecovered?[number][default:90]
--statementswhat%ofstatementsmustbecovered?
[number][default:0]
--per-filecheckthresholdsperfile[boolean][default:false]
--100shortcutfor--check-coverage--lines100--functions
100--branches100--statements100
[boolean][default:false]

Options:
--helpShowhelp[boolean]
--versionShowversionnumber[boolean]
-c,--configpathtoJSONconfigurationfile
[default:(default)]
--exclude-node-moduleswhetherornottoexcludeallnode_modulefolders
(i.e.**/node_modules/**)bydefault
[boolean][default:true]
--temp-directorydirectoryV8coveragedataiswrittentoandread
from
[default:\\"./coverage/tmp\\"]
--cleanshouldtempfilesbedeletedbeforescript
execution[boolean][default:true]
--resolveresolvepathstoalternatebasedirectory
[default:\\"\\"]
--wrapper-lengthhowmanybytesisthewrapperprefixonexecuted
JavaScript[number]
--omit-relativeomitanypathsthatarenotabsolute,e.g.,
internal/net.js[boolean][default:true]
--allowExternalsupplying--allowExternalwillcausec8toallow
filesfromoutsideofyourcwd.Thisappliesboth
tofilesdiscoveredincoveragetempfilesand
alsosrcfilesdiscoveredifusingthe--allflag.
[boolean][default:false]
--merge-asyncsupplying--merge-asyncwillmergeallv8coverage
reportsasynchronouslyandincrementally.Thisis
toavoidOOMissueswithNode.jsruntime.
[boolean][default:false]
--print-configPrintthederivedconfigurationbetweencommand
lineparametersandloadedconfigurationfile
[boolean][default:false]
--print-config-formatFormattoprinttheconfigurationin.Accepted
formatsareeithertextorjson
[string][default:\\"text\\"]

visithttps://git.io/vHysAforlistofavailablereporters

Notenoughnon-optionarguments:got0,needatleast1
"
`;

exports[`Print derived configuration CLI option should not demand any arguments: --print-config 1`] = `
",


/* ________/\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\_        _____/\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\____         */
/*  _____/\\\\\\\\\\\\////////__        ___/\\\\\\\\\\\\///////\\\\\\\\\\\\__        */
/*   ___/\\\\\\\\\\\\/___________        __\\\\/\\\\\\\\\\\\_____\\\\/\\\\\\\\\\\\__       */
/*    __/\\\\\\\\\\\\_____________        __\\\\///\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/___      */
/*     _\\\\/\\\\\\\\\\\\_____________        ___/\\\\\\\\\\\\///////\\\\\\\\\\\\__     */
/*      _\\\\//\\\\\\\\\\\\____________        __/\\\\\\\\\\\\______\\\\//\\\\\\\\\\\\_    */
/*       __\\\\///\\\\\\\\\\\\__________        _\\\\//\\\\\\\\\\\\______/\\\\\\\\\\\\__   */
/*        ____\\\\////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\_        __\\\\///\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/___  */
/*         _______\\\\/////////__        ____\\\\/////////_____ */



Command Issued:     c8 --print-config
Config File Loaded: ./.nycrc



Derived Configuration from CLI options and configuration file
------------------------------------------------------------------------------
100:                           false
print-config:                  true
reporter:                      [
                                 \\"html\\",
                                 \\"text\\"
                               ]
lines:                         95
branches:                      82
statements:                    95
config:                        './.nycrc'
reports-dir:                   './coverage'
report-dir:                    './coverage'
all:                           false
src:                           undefined
exclude-node-modules:          true
include:                       []
exclude:                       [
                                 \\"coverage/**\\",
                                 \\"packages/*/test{,s}/**\\",
                                 \\"**/*.d.ts\\",
                                 \\"test{,s}/**\\",
                                 \\"test{,-*}.{js,cjs,mjs,ts,tsx,jsx}\\",
                                 \\"**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}\\",
                                 \\"**/__tests__/**\\",
                                 \\"**/{ava,babel,nyc}.config.{js,cjs,mjs}\\",
                                 \\"**/jest.config.{js,cjs,mjs,ts}\\",
                                 \\"**/{karma,rollup,webpack}.config.js\\",
                                 \\"**/.{eslint,mocha}rc.{js,cjs}\\"
                               ]
extension:                     [
                                 \\".js\\",
                                 \\".cjs\\",
                                 \\".mjs\\",
                                 \\".ts\\",
                                 \\".tsx\\",
                                 \\".jsx\\"
                               ]
exclude-after-remap:           false
skip-full:                     false
check-coverage:                false
functions:                     0
per-file:                      false
temp-directory:                './coverage/tmp'
clean:                         true
resolve:                       ''
omit-relative:                 true
allow-external:                false
merge-async:                   false
print-config-format:           'text'

,"
`;

exports[`Print derived configuration CLI option should not demand any arguments: --print-config=true 1`] = `
",


/* ________/\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\_        _____/\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\____         */
/*  _____/\\\\\\\\\\\\////////__        ___/\\\\\\\\\\\\///////\\\\\\\\\\\\__        */
/*   ___/\\\\\\\\\\\\/___________        __\\\\/\\\\\\\\\\\\_____\\\\/\\\\\\\\\\\\__       */
/*    __/\\\\\\\\\\\\_____________        __\\\\///\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/___      */
/*     _\\\\/\\\\\\\\\\\\_____________        ___/\\\\\\\\\\\\///////\\\\\\\\\\\\__     */
/*      _\\\\//\\\\\\\\\\\\____________        __/\\\\\\\\\\\\______\\\\//\\\\\\\\\\\\_    */
/*       __\\\\///\\\\\\\\\\\\__________        _\\\\//\\\\\\\\\\\\______/\\\\\\\\\\\\__   */
/*        ____\\\\////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\_        __\\\\///\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/___  */
/*         _______\\\\/////////__        ____\\\\/////////_____ */



Command Issued:     c8 --print-config=true
Config File Loaded: ./.nycrc



Derived Configuration from CLI options and configuration file
------------------------------------------------------------------------------
100:                           false
print-config:                  true
reporter:                      [
                                 \\"html\\",
                                 \\"text\\"
                               ]
lines:                         95
branches:                      82
statements:                    95
config:                        './.nycrc'
reports-dir:                   './coverage'
report-dir:                    './coverage'
all:                           false
src:                           undefined
exclude-node-modules:          true
include:                       []
exclude:                       [
                                 \\"coverage/**\\",
                                 \\"packages/*/test{,s}/**\\",
                                 \\"**/*.d.ts\\",
                                 \\"test{,s}/**\\",
                                 \\"test{,-*}.{js,cjs,mjs,ts,tsx,jsx}\\",
                                 \\"**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}\\",
                                 \\"**/__tests__/**\\",
                                 \\"**/{ava,babel,nyc}.config.{js,cjs,mjs}\\",
                                 \\"**/jest.config.{js,cjs,mjs,ts}\\",
                                 \\"**/{karma,rollup,webpack}.config.js\\",
                                 \\"**/.{eslint,mocha}rc.{js,cjs}\\"
                               ]
extension:                     [
                                 \\".js\\",
                                 \\".cjs\\",
                                 \\".mjs\\",
                                 \\".ts\\",
                                 \\".tsx\\",
                                 \\".jsx\\"
                               ]
exclude-after-remap:           false
skip-full:                     false
check-coverage:                false
functions:                     0
per-file:                      false
temp-directory:                './coverage/tmp'
clean:                         true
resolve:                       ''
omit-relative:                 true
allow-external:                false
merge-async:                   false
print-config-format:           'text'

,"
`;

exports[`Print derived configuration CLI option should not demand arguments: --print-config=false 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    66.66 |      50 |   64.28 |                   
 vanilla      |   78.26 |       75 |     100 |   78.26 |                   
  loaded.js   |   73.68 |    71.42 |     100 |   73.68 | 4-5,16-18         
  main.js     |     100 |      100 |     100 |     100 |                   
 vanilla/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.js |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,"
`;
